--- a/style.css
+++ b/style.css
@@ -1,4 +1,74 @@
-.rabbit {
-    background-color: red;
+h4 {
+	font-family: 'Architects Daughter';
+	font-size: medium;
+	padding: 10px
 }
 
+body {
+	background-color: snow;
+}
+
+* {
+	font-family: sans-serif;
+}
+
+.filters > button {
+	background-color: white;
+	width: 200px;
+}
+
+button {
+	border: none;
+	height: 50px;
+	width: 70px;
+	border-radius: 10px;
+	margin: 10px;
+}
+
+button:hover {
+	background-color: rgba(0, 0, 0, 0.103);
+}
+
+
+
+.card > img {
+	height: auto; 
+	width: auto; 
+	width: 250px; 
+	height: 250px;
+}
+
+.card {
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.05);
+	background-color: white;
+	transition: 0.3s;
+	width: 300px;
+	margin: auto;
+	margin-bottom: 10px;
+}
+
+.card:hover {
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.1);
+}
+
+.data {
+	padding: 2px 16px;
+	font-size: medium;
+}
+
+.filters {
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+	display: flex;
+	flex-direction: column;
+	width: 275px;
+	height: 2000px;
+	background-color: rgba(247, 241, 241, 0.664);
+}
+
+.carddeck {
+	align-self: flex-start;
+	justify-content: flex-start;
+	display: flex;
+	flex-wrap: wrap;
+}
+  
