--- a/style.css
+++ b/style.css
@@ -1,9 +1,22 @@
 h4 {
 	font-family: 'Architects Daughter';
-	font-size: medium;
+	font-size: Large;
 	padding: 10px
 }
 
+textarea, input {
+	border-radius: 5px;
+	width: 200px;
+	margin: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	font-size: large;
+}
+
+textarea {
+	resize: none;
+	height: 300px;
+}
 body {
 	background-color: snow;
 }
@@ -32,10 +45,8 @@ button:hover {
 
 
 .card > img {
+	width: 300px; 
 	height: auto; 
-	width: auto; 
-	width: 250px; 
-	height: 250px;
 }
 
 .card {
@@ -43,8 +54,8 @@ button:hover {
 	background-color: white;
 	transition: 0.3s;
 	width: 300px;
-	margin: auto;
 	margin-bottom: 10px;
+	margin-right: 10px;
 }
 
 .card:hover {
@@ -60,14 +71,15 @@ button:hover {
 	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 	display: flex;
 	flex-direction: column;
-	width: 275px;
+	width: 230px;
 	height: 2000px;
 	background-color: rgba(247, 241, 241, 0.664);
+	margin-right: 20px;
 }
 
 .carddeck {
 	align-self: flex-start;
-	justify-content: flex-start;
+	justify-content: space-around;
 	display: flex;
 	flex-wrap: wrap;
 }
